--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,7 +10,6 @@ body {
 
 }
 
-
 .container {
     display: flex;
     flex-direction: row;
@@ -19,6 +18,13 @@ body {
 
 
 /* sidebar */
+.dropdown-btn{
+    display: none;
+}
+
+.dropdown-content{
+    display: none;
+}
 
 .sidebar-container {
     width: 20%;
@@ -58,10 +64,17 @@ body {
     overflow: hidden;
     text-decoration: none;
     cursor: pointer;
-    width: 100%;
+    width: 90%;
     padding: 8px 16px;
     text-align: left;
     color: snow;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.sidebar-item:hover {
+    background-color: #f1f1f1;
+    color: #333;
+    padding-left: 24px; 
 }
 
 /* Main */
@@ -197,3 +210,277 @@ body {
     display: inline-block;
     border-radius: 4px;
 }
+
+
+/* Responsive */
+
+/* Tablet */
+
+@media screen and (max-width: 1000px) {
+    .dropdown-btn{
+        display: block;
+        background-color: #f54257;
+        color: white;
+        padding: 16px;
+        font-size: 16px;
+        border: none;
+        cursor: pointer;
+        width: 100%;
+        text-align: left;
+        transition: background-color 0.3s ease;
+    }
+
+    
+    .burger-icon {
+        font-size: 24px;
+        margin-right: 10px;
+    }
+
+
+    .container{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100vh;
+    }
+
+    .sidebar-container{
+        width: 100vw;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        -webkit-text-size-adjust: 100%;
+        font-family: Verdana,sans-serif;
+        line-height: 1.5;
+        font-size: 18px!important;
+        color: #fff!important;
+        font-weight: bold;
+        box-sizing: inherit;
+        z-index: 3;
+        background-color: #f54257;
+    }
+
+    .sidebar-items{
+        display: flex;
+        flex-direction: row;
+        position: relative;
+        align-items: center;
+        width: 50%;
+        padding: 0;
+        margin: 0;
+        list-style: none;
+        position: sticky;
+        top: 0;
+    }
+
+    .dropdown-btn {
+        background-color: #f54257;
+        color: white;
+        padding: 16px;
+        font-size: 16px;
+        border: none;
+        cursor: pointer;
+        width: 100%;
+        text-align: center;
+        transition: background-color 0.3s ease;
+    }
+
+    .burger-icon {
+        font-size: 24px;
+        margin-right: 10px;
+    }
+
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        left: 100px;
+        top: 50px;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+        width: 100%;
+        transition: all 0.3s ease;
+    }
+    
+    .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        transition: background-color 0.3s ease, transform 0.3s ease;
+    }
+
+    
+    .dropdown-content a:hover {
+        background-color: #f1f1f1;
+        transform: translateX(10px);
+    }
+
+    
+    .sidebar-items:hover .dropdown-content {
+        display: block;
+    }
+
+
+    .sidebar-item{
+        -webkit-text-size-adjust: 100%;
+        font-family: Verdana,sans-serif;
+        line-height: 1.5;
+        font-size: 1rem!important;
+        font-weight: bold;
+        box-sizing: inherit;
+        overflow: hidden;
+        text-decoration: none;
+        cursor: pointer;
+        width: 100%;
+        padding: 10px;
+        transition: background-color 0.3s ease, transform 0.3s ease;
+    }
+
+    .sidebar-item:hover {
+        background-color: #f1f1f1;
+        transform: translateX(10px);
+    }
+
+    .main-container{
+        width: 100%;
+    }
+}
+
+/* Mobile */
+
+@media screen and (max-width: 480px) {
+    .container{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100vh;
+    }
+
+    .dropdown-btn{
+        display: block;
+        background-color: #f54257;
+        color: white;
+        padding: 16px;
+        font-size: 16px;
+        border: none;
+        cursor: pointer;
+        width: 100%;
+        text-align: left;
+        transition: background-color 0.3s ease;
+    }
+
+    
+    .burger-icon {
+        font-size: 24px;
+        margin-right: 10px;
+    }
+
+    .sidebar-container{
+        width: 100vw;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        -webkit-text-size-adjust: 100%;
+        font-family: Verdana,sans-serif;
+        line-height: 1.5;
+        font-size: 18px!important;
+        color: #fff!important;
+        font-weight: bold;
+        box-sizing: inherit;
+        z-index: 3;
+        background-color: #f54257;
+    }
+
+    .sidebar-items{
+        display: flex;
+        flex-direction: row;
+        position: relative;
+        align-items: center;
+        width: 50%;
+        padding: 0;
+        margin: 0;
+        list-style: none;
+        position: sticky;
+        top: 0;
+    }
+
+    .dropdown-btn {
+        background-color: #f54257;
+        color: white;
+        padding: 16px;
+        font-size: 16px;
+        border: none;
+        cursor: pointer;
+        width: 100%;
+        text-align: center;
+        transition: background-color 0.3s ease;
+    }
+
+    .burger-icon {
+        font-size: 24px;
+        margin-right: 10px;
+    }
+
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        min-width: 160px;
+        top: 50px;
+        left: 50%;
+        transform: translateX(-50%);
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+        width: 100%;
+        transition: all 0.3s ease;
+    }
+    
+    .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        transition: background-color 0.3s ease, transform 0.3s ease;
+    }
+
+    
+    .dropdown-content a:hover {
+        background-color: #f1f1f1;
+        transform: translateX(10px);
+    }
+
+    
+    .sidebar-items:hover .dropdown-content {
+        display: block;
+    }
+
+
+    .sidebar-item{
+        -webkit-text-size-adjust: 100%;
+        font-family: Verdana,sans-serif;
+        line-height: 1.5;
+        font-size: 1rem!important;
+        font-weight: bold;
+        box-sizing: inherit;
+        overflow: hidden;
+        text-decoration: none;
+        cursor: pointer;
+        width: 100%;
+        padding: 10px;
+        transition: background-color 0.3s ease, transform 0.3s ease;
+    }
+
+    .sidebar-item:hover {
+        background-color: #f1f1f1;
+        transform: translateX(10px);
+    }
+
+    .main-container{
+        width: 100%;
+    }
+}
+
