--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,7 +7,7 @@ body {
     font-size: 1em;
     margin: 0;
     padding: 0;
-
+    font-family: "Roboto", "Helvetica Neue", serif;
 }
 
 .container {
@@ -31,7 +31,7 @@ body {
     display: flex;
     flex-direction: column;
     -webkit-text-size-adjust: 100%;
-    font-family: Verdana,sans-serif;
+    font-family: Verdana,sans-serif !important;
     line-height: 1.5;
     font-size: 1.5rem!important;
     color: #fff!important;
@@ -56,7 +56,7 @@ body {
 
 .sidebar-item{
     -webkit-text-size-adjust: 100%;
-    font-family: Verdana,sans-serif;
+    font-family: Verdana,sans-serif !important;
     line-height: 1.5;
     font-size: 18px!important;
     font-weight: bold;
@@ -65,7 +65,7 @@ body {
     text-decoration: none;
     cursor: pointer;
     width: 90%;
-    padding: 8px 16px;
+    padding: 1em;
     text-align: left;
     color: snow;
     transition: background-color 0.3s ease, transform 0.3s ease;
@@ -83,6 +83,7 @@ body {
     width: 80%;
     display: flex;
     flex-direction: column;
+    padding: 0 2em;
 }
 
 /* week schedule */
@@ -97,7 +98,6 @@ body {
 .week-schedule {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
     align-items: center;
     margin: 1rem 0;
     overflow-x: auto;
@@ -216,39 +216,23 @@ body {
 
 /* Tablet */
 
-@media screen and (max-width: 1000px) {
-    .dropdown-btn{
-        display: block;
-        background-color: #f54257;
-        color: white;
-        padding: 16px;
-        font-size: 16px;
-        border: none;
-        cursor: pointer;
-        width: 100%;
-        text-align: left;
-        transition: background-color 0.3s ease;
-    }
-
-    
-    .burger-icon {
-        font-size: 2em;
-        margin-right: 10px;
-    }
-
-
+@media screen and (max-width: 1180px) {
     .container{
         display: flex;
         flex-direction: column;
+        overflow-x: hidden;
         width: 100%;
         height: 100vh;
+    }
+    
+    .sidebar-logo{
+        margin-left: 1rem;
     }
 
     .sidebar-container{
         width: 100vw;
         display: flex;
         flex-direction: row;
-        justify-content: center;
         align-items: center;
         -webkit-text-size-adjust: 100%;
         font-family: Verdana,sans-serif;
@@ -266,12 +250,102 @@ body {
         flex-direction: row;
         position: relative;
         align-items: center;
-        width: 50%;
-        padding: 0;
+        width: 100%;
+        padding: 1em 2em;
         margin: 0;
         list-style: none;
         position: sticky;
         top: 0;
+    }
+
+    .sidebar-item{
+        -webkit-text-size-adjust: 100%;
+        font-family: Verdana,sans-serif;
+        line-height: 1.5;
+        font-size: 1rem!important;
+        font-weight: bold;
+        box-sizing: inherit;
+        overflow: hidden;
+        text-decoration: none;
+        cursor: pointer;
+        width: 100%;
+        padding: 10px;
+        transition: background-color 0.3s ease, transform 0.3s ease;
+    }
+
+    .sidebar-item:hover {
+        background-color: #f1f1f1;
+        transform: translateX(10px);
+    }
+
+    .main-container{
+        width: 100%;
+    }
+}
+
+/* Special */
+
+@media screen and (max-width: 980px) {
+    .dropdown-btn{
+        display: block;
+        background-color: #f54257;
+        color: white;
+        padding: 16px;
+        font-size: 16px;
+        border: none;
+        cursor: pointer;
+        width: 100%;
+        text-align: left;
+        transition: background-color 0.3s ease;
+    }
+ 
+    .burger-icon {
+        font-size: 2em;
+        margin-right: 10px;
+    }
+    .container{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100vh;
+    }
+    
+    .sidebar-logo{
+        margin-left: 1rem;
+    }
+
+    .sidebar-container{
+        width: 100vw;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        -webkit-text-size-adjust: 100%;
+        font-family: Verdana,sans-serif;
+        line-height: 1.5;
+        font-size: 18px!important;
+        color: #fff!important;
+        font-weight: bold;
+        box-sizing: inherit;
+        z-index: 3;
+        background-color: #f54257;
+    }
+
+    .sidebar-items{
+        display: flex;
+        flex-direction: row;
+        position: relative;
+        align-items: center;
+        width: 100%;
+        padding: 1em 2em;
+        margin: 0;
+        list-style: none;
+        position: sticky;
+        top: 0;
+    }
+
+    .sidebar-item{
+        padding: 0;
+        width: 10%;
     }
 
     .dropdown-btn {
@@ -296,7 +370,7 @@ body {
         position: absolute;
         background-color: #f9f9f9;
         left: 100px;
-        top: 50px;
+        top: 80px;
         min-width: 160px;
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
         z-index: 1;
@@ -348,6 +422,7 @@ body {
         width: 100%;
     }
 }
+
 
 /* Mobile */
 
