--- a/public/users/signing.css
+++ b/public/users/signing.css
@@ -10,18 +10,18 @@
     position: relative;
     margin: 1em;
     min-width: 30vw;
-    border: black 5px solid;
+    border: rgb(226, 33, 33) 5px solid;
   }
   
   .title {
     font-size: 28px;
-    color: royalblue;
+    color: rgb(230, 71, 50);
     font-weight: 600;
     letter-spacing: -1px;
     position: relative;
     display: flex;
     align-items: center;
-    padding-left: 30px;
+    /* padding-left: 30px; */
     align-self: center;
   }
   
@@ -35,7 +35,7 @@
   }
   
   .signin a {
-    color: royalblue;
+    color: rgb(212, 73, 55);
   }
   
   .signin a:hover {
@@ -88,16 +88,17 @@
   .submit {
     border: none;
     outline: none;
-    background-color: royalblue;
+    background-color: rgb(230, 71, 50);
     padding: 10px;
     border-radius: 10px;
     color: #fff;
     font-size: 16px;
     transform: .3s ease;
+    cursor: pointer;
   }
   
   .submit:hover {
-    background-color: rgb(56, 90, 194);
+    background-color: rgb(214, 101, 86);
   }
   
 .container{
@@ -117,4 +118,28 @@ body{
     align-items: center;
     justify-content: center;
     width: 80vw;
+}
+
+@media screen and (max-width: 1180px) {
+  .container{
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: 100vh;
+  }
+
+  .form-container{
+    width: 100%;
+  }
+
+  .form{
+    min-width: 50vw;
+  }
+
+}
+
+/* Mobile */
+
+@media screen and (max-width: 480px){
+
 }
